bugfix titleOfTaskOverlay: break up words that are too long

--- a/stylesheets/board.css
+++ b/stylesheets/board.css
@@ -249,7 +249,8 @@
 .titleOfTaskOverlay {
     font-size: 61px;
     font-weight: 700;
-    color: rgba(0, 0, 0, 1)
+    color: rgba(0, 0, 0, 1);
+    word-break: break-all;
 }
 
 .descriptionOfTaskOverlay {
